[gd_scene load_steps=2 format=3 uid="uid://c7k6wsj2k2kcx"]

[ext_resource type="Script" path="res://Pro52a.gd" id="1_bcirj"]

[node name="Pro52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bcirj")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 167.0
offset_bottom = 111.0
text = "Length:"

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 236.0
offset_right = 675.0
offset_bottom = 506.0

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 99.0
offset_right = 169.0
offset_bottom = 210.0
text = "Width:"

[node name="btncalc" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 550.0
offset_right = 229.0
offset_bottom = 647.0
text = "Calculate"

[node name="btmClear" type="Button" parent="."]
layout_mode = 0
offset_left = 467.0
offset_top = 550.0
offset_right = 695.0
offset_bottom = 647.0
text = "Clear"

[node name="btmExit" type="Button" parent="."]
layout_mode = 0
offset_left = 925.0
offset_top = 551.0
offset_right = 1153.0
offset_bottom = 648.0
text = "Exit"

[node name="txtLen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 376.0
offset_top = 1.0
offset_right = 707.0
offset_bottom = 89.0

[node name="txtWid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 375.0
offset_top = 106.0
offset_right = 708.0
offset_bottom = 198.0

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btmClear" to="." method="_on_btm_clear_pressed"]
[connection signal="pressed" from="btmExit" to="." method="_on_btm_exit_pressed"]
